--- a/second.html
+++ b/second.html
@@ -14,32 +14,53 @@
         <p> <em>Le nouveau snack de street food ivoirienne à Bordeaux !</em> </p>
     </div>
 
+    <div class="titre">
 <h2>Que voulez-vous manger ?</h2>
+</div>
 
-<div class="carte">
-    <img src="" alt="">
-    <h3> Mini Sogo </h3>
-    <p> frzf</p>
+<h6 id="fin"> Choisissez, vous n'avez rien à faire de plus !</h6>
+
+<h4 id="plats"> Plats</h4>
+<div class="plats">
+    <div class="carte">
+        <p> Mini Sogo </p>
+        <img src="images/minisogo.png" alt="">
+        </div>
+    
+    <div class="carte">
+        <p>Sogo</p>
+       <img src="images/sogo.png" alt="">
+    </div>
+</div>
+
+<h4> Condiments </h4>
+<div class="condiments">
+    <div class ="conds">
+       <p> Avocat</p> 
+       <img src="images/avocat.jpg" alt="">
     </div>
 
-<div class="carte">
-    <h3> Sogo </h3>
-    <p> confiration</p>
+    <div class="conds">
+        <p> Oeufs</p> 
+        <img src="images/oeuf.jpg" alt="">
+     </div>
 </div>
 
-<div class="carte">
-<h3> Condiments </h3>
-<p> Avocat</p>
-<p> Oeuf</p>
+<h4 id="boissons">Boissons</h4>
+<div class="boissons">
+    <p>Bissap</p>
+    <img src="images/bissap.jpg" alt="">
 </div>
-<div class="carte">
-    <h3>Boissons</h3>
-    <p>bissap</p>
-</div>
-<h6> Choisissez, vous n'avez rien à faire de plus !</h6>
+
+
+
 <div class="footer">
     <h5> Copyright</h5>
     <p>Website made by Allan Branger for the company O'pain bro.</p>
-<p> mail : allan.branger@efj.fr </p>
+    <p> <i class="fa-solid fa-envelope"></i>: allanbranger@efj.fr</p>
+    <div class="accroche">
+        <p>Vous attendez quoi pour nous appeler ?<i class="fa-solid fa-phone-volume"></i></p>
+    </div></p>
+</div>
 </body> 
 </html>
