--- a/second.html
+++ b/second.html
@@ -12,6 +12,7 @@
     <div class="sticky">
         <h1> O'Pain bro </h1>
         <p> <em>Le nouveau snack de street food ivoirienne à Bordeaux !</em> </p>
+        <a href="index.html" class="btn-blue"> Home</a>
     </div>
 
     <div class="titre">
